added HTML to the index view file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>CPSC113 Todo</title>
-</head>
-<body>
+    <title>CPSC213 - </title>
+    <h1>To-Do App</h1>
+  </head>
+  <body>
+    
+
+  
+    
+  <div class="errors">
+    <ul>
+      
+      
+
+      
+        <li>
+          No such user
+        </li>
+      
+    </ul>
+
+  </div>
 
 
-    {{{body}}}
+  
+
+  
+    
+  <div>
+    <form class="login" action="/users/login" method="POST">
+      <label for="email">Email</label>
+      <input name="email" type="text"><br>
+      <label for="password">Password</label>
+      <input name="password" type="text"><br>
+      <input class="submit" type="submit">
+    </form>
+  </div>
+
+  <div><hr></div>
+
+  <div>
+    <form action="/users/register" method="post" class="register" style="display: block;">
+      <label for="name">Name</label>
+      <input name="name" type="text" class="text-input" placeholder="name" value="">
+      <label for="email">Email</label>
+      <input name="email" type="email" class="text-input" placeholder="email" value="">
+      <label for="password">Password</label>
+      <input name="password" type="password" class="text-input" placeholder="password">
+      <label for="passwordConfirmation">Confirm Password</label>
+      <input name="passwordConfirmation" type="password" class="text-input" placeholder="password confirmation">
+      <input class="submit" type="submit">
+    </form>
+  </div>
+
+  
+
 
 <footer>
-    <a href="/user/logout" class="logout">Logout</a>
+  <a href="/users/logout" class="logout">Logout</a>
 </footer>
-</body>
+
+
+  </body>
 </html>
