started writing for controller register user functions

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,18 +7,12 @@
   </head>
   <body>
     
-
   
     
   <div class="errors">
     <ul>
       
-      
-
-      
-        <li>
-          No such user
-        </li>
+    <! -- list errors here>
       
     </ul>
 
